--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "proxy": "https://backend-boo.herokuapp.com",
   "private": true,
+  "homepage": "https://Alicutun.github.io/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
