--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-seat-picker": "^1.5.3",
     "react-toastify": "^9.0.8",
+    "react-tooltip": "^4.4.3",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "timeago.js": "^4.0.2",
