--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-facebook-login": "^4.1.1",
     "react-fast-marquee": "^1.3.5",
     "react-icons": "^4.4.0",
     "react-loading": "^2.0.3",
