--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@leecheuk/react-google-login": "^5.4.1",
     "@mui/material": "^5.10.11",
     "@mui/x-data-grid": "^5.17.9",
+    "@react-oauth/google": "^0.8.0",
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
