--- a/package.json
+++ b/package.json
@@ -1,70 +1,71 @@
 {
-  "name": "web-fixgo",
-  "version": "0.1.0",
-  "private": true,
-  "homepage": "https://Alicutun.github.io/",
-  "engines": {
-    "node": "16.18.0"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@leecheuk/react-google-login": "^5.4.1",
-    "@mui/material": "^5.10.11",
-    "@mui/x-data-grid": "^5.17.9",
-    "@react-oauth/google": "^0.8.0",
-    "@reduxjs/toolkit": "^1.8.5",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.27.2",
-    "gapi-script": "^1.2.0",
-    "jwt-decode": "^3.1.2",
-    "normalize.css": "^8.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-facebook-login": "^4.1.1",
-    "react-fast-marquee": "^1.3.5",
-    "react-icons": "^4.4.0",
-    "react-loading": "^2.0.3",
-    "react-redux": "^8.0.2",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
-    "react-seat-picker": "^1.5.3",
-    "react-toastify": "^9.0.8",
-    "react-tooltip": "^4.5.0",
-    "redux": "^4.2.0",
-    "redux-persist": "^6.0.0",
-    "t-a-e-3d-carousel-reactjs": "^1.0.8",
-    "timeago.js": "^4.0.2",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "sass": "^1.54.5"
-  }
+	"name": "web-fixgo",
+	"version": "0.1.0",
+	"private": true,
+	"homepage": "https://Alicutun.github.io/",
+	"engines": {
+		"node": "16.18.1"
+	},
+	"dependencies": {
+		"@emotion/react": "^11.10.6",
+		"@emotion/styled": "^11.10.6",
+		"@leecheuk/react-google-login": "^5.4.1",
+		"@mui/material": "^5.12.1",
+		"@mui/x-data-grid": "^5.17.9",
+		"@react-oauth/google": "^0.8.0",
+		"@reduxjs/toolkit": "^1.8.5",
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/react": "^13.3.0",
+		"@testing-library/user-event": "^13.5.0",
+		"axios": "^0.27.2",
+		"gapi-script": "^1.2.0",
+		"jwt-decode": "^3.1.2",
+		"normalize.css": "^8.0.1",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-facebook-login": "^4.1.1",
+		"react-fast-marquee": "^1.3.5",
+		"react-icons": "^4.4.0",
+		"react-loading": "^2.0.3",
+		"react-redux": "^8.0.2",
+		"react-router-dom": "^6.3.0",
+		"react-scripts": "5.0.1",
+		"react-seat-picker": "^1.5.3",
+		"react-share": "^4.4.1",
+		"react-toastify": "^9.0.8",
+		"react-tooltip": "^4.5.0",
+		"redux": "^4.2.0",
+		"redux-persist": "^6.0.0",
+		"t-a-e-3d-carousel-reactjs": "^1.0.8",
+		"timeago.js": "^4.0.2",
+		"web-vitals": "^2.1.4"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject",
+		"predeploy": "npm run build"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"sass": "^1.54.5"
+	}
 }
