--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"axios": "^0.27.2",
 		"gapi-script": "^1.2.0",
 		"jwt-decode": "^3.1.2",
+		"moment": "^2.29.4",
 		"normalize.css": "^8.0.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
